[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["EgorZH <egor2001zhukov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
socketio = "^0.2.1"
python-socketio = "^5.8.0"
eventlet = "^0.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
